---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-07-11 Stephane Letz  <letz@grame.fr>

	* Raise drivers time out used in synchronous mode.

2009-07-09 Stephane Letz  <letz@grame.fr>

	* Use __attribute__((__packed__)) again, more fixes for 64/32 mixed mode.
	* Torben Hohn changes for 64/32 mixed mode in wscripts.
	* Add compile time option for maximum ports per application.

2009-07-07 Stephane Letz  <letz@grame.fr>

	* Use __attribute__((__aligned__(32))) instead of __attribute__((__packed__)) for 64/32 mixed mode.

2009-07-03 Stephane Letz  <letz@grame.fr>

	* Another Tim Bechmann memops.c optimization patch.

2009-07-01 Stephane Letz  <letz@grame.fr>

	* Tim Bechmann memops.c optimization patch.

2009-06-30 Stephane Letz  <letz@grame.fr>

	* Tim Bechmann patch : hammerfall, only release monitor thread, if it has been created.

2009-06-19 Stephane Letz  <letz@grame.fr>

	* Correct JackTransportEngine::MakeAllLocating, sync callback has to be called in this case also.
	* NetJack2 code : better error checkout, method renaming.

2009-06-17 Stephane Letz  <letz@grame.fr>

	* Move DBus based audio device reservation code in ALSA backend compilation.

2009-06-16 Stephane Letz  <letz@grame.fr>

	* Correct JackFifo::TimedWait for EINTR handling.

2009-06-05 Stephane Letz  <letz@grame.fr>

	* Correct jack_set_error_function, jack_set_info_function and jack_set_thread_creator functions.

2009-05-18 Stephane Letz  <letz@grame.fr>

	* Correct wcsript files to create jackdbus only (and not create jackd anymore) when compiled in --dbus mode, add a --classic option. Both options are possible but issue a warning.
