@@ -25,6 +25,10 @@ Paul Davis
   Jackdmp changes log
 ---------------------------
 
+2009-07-16 Stephane Letz  <letz@grame.fr>
+
+	* Rename JackDriver::Init method to JackDriver::Initialize (to avoid confusion with JackThread::Init method).
+
 2009-07-11 Stephane Letz  <letz@grame.fr>
 
 	* Raise drivers time out used in synchronous mode.
